[gd_scene load_steps=9 format=3 uid="uid://7e4ith8iqhf1"]

[ext_resource type="Script" uid="uid://gatyb7d260ja" path="res://Scenes/Player/Body Part Scenes/RigMove.gd" id="1_6n2hn"]
[ext_resource type="PackedScene" uid="uid://dm2dnot7xhj2p" path="res://Scenes/Player/Body Part Scenes/RigHead/RigHead.tscn" id="1_hcoe6"]
[ext_resource type="PackedScene" uid="uid://7mvuqltagalc" path="res://Scenes/Player/Body Part Scenes/RigTorso/RigTorso.tscn" id="2_6n2hn"]
[ext_resource type="PackedScene" uid="uid://be4nn4uuu1qgo" path="res://Scenes/Player/Body Part Scenes/RigArms/RigLeftArm.tscn" id="3_xpvmu"]
[ext_resource type="PackedScene" uid="uid://bdbqxexxodb32" path="res://Scenes/Player/Body Part Scenes/RigArms/RigRightArm.tscn" id="4_ty7tf"]
[ext_resource type="PackedScene" uid="uid://de1wo850vs1xe" path="res://Scenes/Player/Body Part Scenes/RigLegs/RigLeftLeg.tscn" id="5_de8fc"]
[ext_resource type="PackedScene" uid="uid://b24mlhsofie3h" path="res://Scenes/Player/Body Part Scenes/RigLegs/RigRightLeg.tscn" id="6_tb8dm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6n2hn"]
radius = 41.0
height = 210.0

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(286, 315)
script = ExtResource("1_6n2hn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, -1)
shape = SubResource("CapsuleShape2D_6n2hn")

[node name="Rig" type="Node2D" parent="."]

[node name="Torso" type="Node2D" parent="Rig"]
z_index = 1

[node name="RigTorso" parent="Rig/Torso" instance=ExtResource("2_6n2hn")]

[node name="Head" type="Node2D" parent="Rig"]
z_index = 2

[node name="RigHead" parent="Rig/Head" instance=ExtResource("1_hcoe6")]

[node name="LeftHand" type="Node2D" parent="Rig"]
z_index = -1

[node name="RigLeftArm" parent="Rig/LeftHand" instance=ExtResource("3_xpvmu")]

[node name="RightHand" type="Node2D" parent="Rig"]
z_index = 5

[node name="RigRightArm" parent="Rig/RightHand" instance=ExtResource("4_ty7tf")]

[node name="LeftLeg" type="Node2D" parent="Rig"]

[node name="RigLeftLeg" parent="Rig/LeftLeg" instance=ExtResource("5_de8fc")]

[node name="RightLeg" type="Node2D" parent="Rig"]
z_index = 4

[node name="RigRightLeg" parent="Rig/RightLeg" instance=ExtResource("6_tb8dm")]
